# ansible-lint-but-fast

./: Cargo.toml  README.md
crates/ansible-lint/: Cargo.toml
crates/ansible-lint-core/: Cargo.toml
crates/ansible-lint-core/src/: config.rs  discovery.rs  error.rs  fix.rs  lib.rs  registry.rs  rule.rs  runner.rs
crates/ansible-lint-core/src/formatter/: brief.rs  codeclimate.rs  full.rs  json.rs  mod.rs  pep8.rs  sarif.rs
crates/ansible-lint-core/src/parser/: mod.rs  playbook.rs  role.rs  task.rs  yaml.rs
crates/ansible-lint-core/src/rules/: command_instead_of_module.rs  deprecated_bare_vars.rs  empty_string_compare.rs  fqcn.rs  ignore_errors.rs  key_order.rs  literal_compare.rs  load_failure.rs  meta.rs  mod.rs  no_changed_when.rs  no_free_form.rs  no_handler.rs  no_jinja_when.rs  no_log_password.rs  no_relative_paths.rs  only_builtins.rs  package_latest.rs  partial_become.rs  risky_file_permissions.rs  risky_shell_pipe.rs  role_name.rs  run_once.rs  var_naming.rs
crates/ansible-lint-core/src/rules/name/: casing.rs  missing.rs  mod.rs  template.rs
crates/ansible-lint-core/src/rules/yaml/: brackets.rs  colons.rs  commas.rs  comments.rs  document_start.rs  empty_lines.rs  indentation.rs  key_duplicates.rs  line_length.rs  mod.rs  new_line_at_eof.rs  octal_values.rs  trailing_spaces.rs  truthy.rs
crates/ansible-lint/src/: main.rs
crates/ansible-lint/tests/: integration.rs
crates/ansible-lint/tests/fixtures/playbooks/: yaml-truthy-fail.yml  yaml-truthy-pass.yml
crates/ansible-lint/tests/fixtures/tasks/: name-missing-fail.yml  name-missing-pass.yml  no-changed-when-fail.yml  no-changed-when-pass.yml  noqa-test.yml
