[package]
name = "ansible-lint-core"
version = "25.5.0"
edition = "2021"
description = "Core library for ansible-lint Rust rewrite"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
yaml-rust2 = { workspace = true }
walkdir = { workspace = true }
globset = { workspace = true }
ignore = { workspace = true }
regex = { workspace = true }
owo-colors = { workspace = true }
indexmap = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
tempfile = "3"
