[package]
name = "ansible-lint"
version = "25.5.0"
edition = "2021"
description = "A linting tool for Ansible playbooks, roles, and collections (Rust rewrite)"
license = "MIT"

[[bin]]
name = "ansible-lint"
path = "src/main.rs"

[dependencies]
ansible-lint-core = { path = "../ansible-lint-core" }
anyhow = { workspace = true }
clap = { workspace = true }
owo-colors = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
